# brew-dependency-submission-action

./: .release.yml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SUPPORT.md  action.yml  pyproject.toml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml
bldsa/: __init__.py  __main__.py  brew.py  dependencies.py  octokit.py
examples/: Brewfile.lock.json
myaction/: __init__.py  __main__.py
tests/: test_brew.py
